--- a/Website.html
+++ b/Website.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <h1>Copyright and Workers Protections From AI: Guidelines</h1>
-<h2>Guideline 1</h2>
+<h2>The Problem</h2>
 <p>
 Insert stuff about that here idk lollll
 </p>
-<h2>Guideline 2</h2>
+<h2>What has been done?</h2>
 <p>
 Insert stuff about that as wellll    
 </p>
-<h2>Guideline 3</h2>
+<h2>What still needs to be done?</h2>
 <p>
 Another thing omg
 </p>
