--- a/Website.html
+++ b/Website.html
@@ -27,7 +27,6 @@
 </div>
 
 </h6>
-
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
@@ -44,6 +43,11 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+
+<footer>
+  <p>Project created by – Will Anderson and Alex Zbinden</p>
+  <p>For educational purposes – May 2025</p>
+</footer>
 
 </body>
 </html>
