--- a/Website.html
+++ b/Website.html
@@ -30,7 +30,10 @@
           affected by the prevalence of generative AI(Current Employment
           Statistics (CES) 2025). The largest example of these concerns boiling
           over is the 2023 Writers Guild of America (WGA) strike, where writers
-          struck for months over these very concerns.
+          struck for months over these very concerns. Additionally, there is an
+          ongoing debate about whether or not the usage of copyrighted materials
+          to train generative AI falls under fair use with corporations such as
+          Meta and OpenAI receiving criticism and lawsuits as a result.
         </p>
       </div>
 
@@ -72,13 +75,47 @@
           </li>
         </ul>
         <p>(Artificial Intelligence 2025)</p>
-        <p>While agreements like this one are a step forward, the laws in the United States that deal with the use of generative AI are still lacking.</p>
+        <p>
+          While agreements like this one are a step forward, the laws in the
+          United States that deal with the training and use of generative AI are
+          still very limited across the country.
+        </p>
       </div>
 
       <button type="button" class="collapsible">
         What Still Needs to Be Done?
       </button>
-      <div class="content"></div>
+      <div class="content">
+        <p>
+          When deciding how to proceed, we should look to several different
+          areas. One approach to this issue that has been taken by companies
+          such as Adobe and Canva is the compensation of artists whose photos
+          are used in the training of AI models. Additionally, their
+          compensation is based on how much those photos are used to train or
+          generate rather than the artists just being paid one time(Cheng,
+          2023). Another thing that we can pull from when deciding how to
+          regulate generative AI is the California Consumer Privacy Act (CCPA).
+          While the CCPA does not directly relate to generative AI, we can
+          repurpose several ideas from it; it discusses ideas such as "the right
+          to know" about the usage of personal information by a business, "the
+          right to delete personal information" that the business collects, and
+          "the right to opt-out" of the sale or sharing of their personal
+          information(California Consumer Privacy Act (CCPA) 2025). We should
+          apply these three rights to laws regarding the training and useage of
+          AI.<br /><br />
+          Artists and copyright holders should have:
+        </p>
+        <ol>
+          <li>
+            The right to know how their information (in this case art or some
+            kind of creative output) is being used by generative AI companies.
+          </li>
+          <li>
+            The right to opt out of their information being used to train AI
+            models.
+          </li>
+        </ol>
+      </div>
     </h6>
     <script>
       var coll = document.getElementsByClassName("collapsible");
@@ -102,25 +139,20 @@
       <p>For educational purposes - May 2025</p>
     </footer>
     <footer>
-      <p>References</p>
+      <p>References:</p>
       <p>
         Artificial Intelligence. (2025, April 17).
         https://www.wga.org/contracts/know-your-rights/artificial-intelligence
       </p>
       <p>
-        Current Employment Statistics (CES). Minnesota Department of Employment
-        and Economic Development. (2025, March 27).
-        https://mn.gov/deed/data/data-tools/current-employment-statistics/
+        California Consumer Privacy Act (CCPA). State of California - Department
+        of Justice - Office of the Attorney General. (2025, January 28).
+        https://oag.ca.gov/privacy/ccpa
       </p>
       <p>
-        Current Employment Statistics (CES). Minnesota Department of Employment
-        and Economic Development. (2025, March 27).
-        https://mn.gov/deed/data/data-tools/current-employment-statistics/
-      </p>
-      <p>
-        Current Employment Statistics (CES). Minnesota Department of Employment
-        and Economic Development. (2025, March 27).
-        https://mn.gov/deed/data/data-tools/current-employment-statistics/
+        Cheng, M. (2023, October 20). How should creators be compensated for
+        their work training AI models?. Quartz.
+        https://qz.com/how-should-creators-be-compensated-for-their-work-train-1850932454
       </p>
       <p>
         Current Employment Statistics (CES). Minnesota Department of Employment
@@ -128,5 +160,6 @@
         https://mn.gov/deed/data/data-tools/current-employment-statistics/
       </p>
     </footer>
+    <button type="button" class="funny">shake</button>
   </body>
 </html>
